--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
                 <i class="fas fa-times a-icon"></i>
             </button>
         </div>
+        <ul class="m-side-navigation__menuItems">
+            <li class="m-side-navigation__menuItem">
+                <a href="">
+                    <i class="far fa-comment-dots a-icon"></i>
+                    <span>Element 1</span>
+                </a>
+            </li>
+            <li class="m-side-navigation__menuItem">
+                <a href="">
+                    <i class="far fa-clock a-icon"></i>
+                    <span>Element 1</span>
+                </a>
+            </li>
+            <li class="m-side-navigation__menuItem">
+                <a href="">
+                    <i class="far fa-user-circle a-icon"></i>
+                    <span>Element 1</span>
+                </a>
+            </li>
+        </ul>
     </section>
 
     <section>
