added selected state

--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@
             </button>
         </div>
         <ul class="m-side-navigation__menuItems">
-            <li class="m-side-navigation__menuItem">
+            <li class="m-side-navigation__menuItem -selected">
                 <a href="">
                     <i class="far fa-comment-dots a-icon"></i>
-                    <span>Element 1</span>
+                    <span>Chat</span>
                 </a>
             </li>
             <li class="m-side-navigation__menuItem">
                 <a href="">
                     <i class="far fa-clock a-icon"></i>
-                    <span>Element 1</span>
+                    <span>Time slot</span>
                 </a>
             </li>
             <li class="m-side-navigation__menuItem">
                 <a href="">
                     <i class="far fa-user-circle a-icon"></i>
-                    <span>Element 1</span>
+                    <span>User information</span>
                 </a>
             </li>
         </ul>
