added 12-col grid with sample content

--- a/index.html
+++ b/index.html
@@ -116,24 +116,13 @@
         </section>
     </div>
     
-    <!--
-    <section>
-        <div class="a-checkbox">
-            <input type="checkbox" name="filter__1" class="checkbox" id="id-filter__1" value="option1">
-            <label for="id-filter__1">Filter Option 1</label>
-        </div>
-
-        <div class="a-checkbox">
-            <input type="checkbox" name="filter__2" class="checkbox" id="id-filter__2" value="option2">
-            <label for="id-filter__2">Filter Option 2</label>
-        </div>
-
-        <div class="a-checkbox">
-            <input type="checkbox" name="filter__3" class="checkbox" id="id-filter__3" value="option3">
-            <label for="id-filter__3">Filter Option 3</label>
-        </div>
+    <section class="-grid__content twelve-col">
+        <button class="a-button">Test</button>
     </section>
-    -->
+
+    <footer class="-grid__footer">
+        <h4>This is the footer</h4>
+    </footer>
 </body>
 
 </html>
