added brand colors to components

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="side-navigation.css">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="checkbox.css">
+    <link rel="stylesheet" href="button.css">
 
     <script src="https://kit.fontawesome.com/419a0ffd8f.js" crossorigin="anonymous"></script>
 
@@ -117,11 +119,16 @@
     </div>
     
     <section class="-grid__content twelve-col">
-        <button class="a-button">Test</button>
+        <button class="a-button -primary">
+            <div class="a-button__label">Button 1</div>
+        </button>
+        <button class="a-button -secondary">
+            <div class="a-button__label">Button 1</div>
+        </button>
     </section>
 
-    <footer class="-grid__footer">
-        <h4>This is the footer</h4>
+    <footer class="o-footer -grid__footer">
+        <p>© This is the footer for lorem ipsum</p>
     </footer>
 </body>
 
