added hover state to table

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <body>
 
     <header class="o-header -grid__header">
-        <div class="o-header__title">Page name lorem ipsum</div>
+        <div class="o-header__title">E-Mail Liste</div>
     </header>
 
     <div class="m-side-navigation__body">
@@ -105,6 +105,21 @@
     </div>
 
     <section class="-grid__content twelve-col">
+
+        <section class="content-section__page_title">
+            <h2>Übersicht der E-Mail Adressen</h1>
+        </section>
+
+        <section class="content-section__page_subtitle">
+            <!--content loaded by jquery-->
+        </section>
+
+        <section class="content-section__action">
+            <button class="a-button -primary">
+                <div class="a-button__label">Email hinzufügen</div>
+            </button>
+        </section>
+    
         <section class="content-section__main">
             <table class="m-table">
                 <thead>
@@ -119,7 +134,6 @@
                         <th>Email</th>
                         <th>Benachrichtigungen</th>
                         <th></th>
-                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -129,17 +143,12 @@
             
         </section>
 
-        <section class="content-section__action">
-            <button class="a-button -primary">
-                <div class="a-button__label">Email hinzufügen</div>
-            </button>
-        </section>
-
     </section>
-
+    <!--
     <footer class="o-footer -grid__footer">
         <p>© This is the footer for lorem ipsum</p>
     </footer>
+    -->
 </body>
 
 </html>
