--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <body>
 
     <header class="o-header -grid__header">
-        <div class="o-header__title">E-Mail Liste</div>
+        <div class="o-header__title">Some page lorem ipsum</div>
     </header>
 
     <div class="m-side-navigation__body">
