--- a/person.html
+++ b/person.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="acss-components/header.css">
-        <link rel="stylesheet" href="second.css">
+        <link rel="stylesheet" href="person.css">
         <link rel="stylesheet" href="acss-components/button.css">
         <link rel="stylesheet" href="acss-components/checkbox.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -27,11 +27,7 @@
                 <div class="-grid__one-col">
                     <h1>Some page subtitle</h1>
                     <p>Zum bearbeiten oder löschen einer Person, Karte anklicken.</p>
-                    <button class="a-button -tertiary">
-                        <div class="a-button__label">
-                            Neue Person hinzufügen
-                        </div>
-                    </button>
+                    
                     <div class="m-persona-card">
                         <div class="persona-card__title">
                             <p>Max Mustermann</p>
@@ -46,7 +42,7 @@
                             </section>
                         </div>
                     </div>
-                    <div class="m-persona-card">
+                    <div class="m-persona-card -selected">
                         <div class="persona-card__title">
                             <p>Peter Mustermann</p>
                             <div class="a-checkbox">
@@ -71,34 +67,6 @@
                             <div class="divider"></div>
                             <section class="person-card__description">
                                 <p>Eine noch etwas längere Beschreibung für die Frau Mareike Musterfrau.</p>
-                            </section>
-                        </div>
-                    </div>
-                    <div class="m-persona-card">
-                        <div class="persona-card__title">
-                            <p>Heidi Musterfrau</p>
-                            <div class="a-checkbox">
-                                <input type="checkbox" name="" id="checkbox-4">
-                            </div>
-                        </div>
-                        <div class="persona-card__content">
-                            <div class="divider"></div>
-                            <section class="person-card__description">
-                                <p>Eine Beschreibung für die Frau Heidi Musterfrau.</p>
-                            </section>
-                        </div>
-                    </div>
-                    <div class="m-persona-card">
-                        <div class="persona-card__title">
-                            <p>Heidi Musterfrau</p>
-                            <div class="a-checkbox">
-                                <input type="checkbox" name="" id="checkbox-4">
-                            </div>
-                        </div>
-                        <div class="persona-card__content">
-                            <div class="divider"></div>
-                            <section class="person-card__description">
-                                <p>Eine Beschreibung für die Frau Heidi Musterfrau.</p>
                             </section>
                         </div>
                     </div>
