initial notification widget

--- a/person.html
+++ b/person.html
@@ -100,6 +100,16 @@
                         <div class="a-button__label">Aktualisieren</div>
                     </button>
                 </div>
+                <div class="a-notification">
+                    <div>
+                        <div id="a-notification__icon">
+                            <span class="material-icons">
+                                info
+                            </span>
+                        </div>
+                        Text inside a notification bar.
+                    </div>
+                </div>
             </section>
         </div>
         
