changed icon background color

--- a/person.html
+++ b/person.html
@@ -104,7 +104,7 @@
                     <div>
                         <div id="a-notification__icon">
                             <span class="material-icons">
-                                info
+                                error
                             </span>
                         </div>
                         Text inside a notification bar.
